--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body {
     background-color:#f5f5f5;
     padding: 20px;
     border-radius: 10px;
-    height: 50%;
+    height: 60%;
     width: 25%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -92,7 +92,7 @@ form{
     transition: all 0.3s ease-in-out;
 }
 
-#msg {
+#mensagem {
     margin-top: 15px;
     text-align: center;
     font-weight: 600;
